--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,10 @@
-name: Android CI
+name: Action Build
 
 on:
   push:
-    branches: master 
+    branches: [ master ]
   pull_request:
-    branches: master 
+    branches: [ master ]
 
 jobs:
   build:
@@ -19,8 +19,16 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+        
+    - name: Grant execute permission for gradlew & Build with Gradle
+      run: chmod +x gradlew && ./gradlew build 
+      
+    - name: Getting… apk ready
+      run: echo -e 'Building… APK'
+    - uses: actions/upload-artifact@v2
+      with:
+        name: action done
+        path: ./app/build/outputs/apk/debug/app-debug.apk
+        
+    - name: LS apk
+      run: ls -a ./app/build/outputs/apk/debug && echo "" && ls -a ./app/build/outputs/apk/release
